# ntrak

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  STYLE_GUIDE.md  THIRD_PARTY_LICENSES.md  USER_GUIDE.md
.github/workflows/: ci.yml  release.yml
asm/: sm_spc_disasm.asm  spc_patchtool.py
asm/extensions/: super_metroid__Arpeggio.asm  super_metroid__Legato_Mode.asm  super_metroid__No_Pattern_KOFF.asm  zelda_alttp__Arpeggio.asm  zelda_alttp__Legato_Mode.asm  zelda_alttp__No_Pattern_KOFF.asm  zelda_alttp__VCMD_Dispatch.asm
config/: engine_configs.json
examples/: sm_new.ntrakproj
include/ntrak/app/: App.hpp  AppState.hpp
include/ntrak/audio/: AudioEngine.hpp  SpcPlayer.hpp
include/ntrak/common/: Log.hpp  Logger.hpp  Paths.hpp  UserGuide.hpp
include/ntrak/emulation/: SpcDsp.hpp
include/ntrak/nspc/: Base64.hpp  BrrCodec.hpp  ItImport.hpp  MidiImport.hpp  NspcAssetFile.hpp  NspcCommand.hpp  NspcCommandHistory.hpp  NspcCommandTransaction.hpp  NspcCompile.hpp  NspcCompileShared.hpp  NspcConverter.hpp  NspcData.hpp  NspcEditor.hpp  NspcEngine.hpp  NspcFlatten.hpp  NspcOptimize.hpp  NspcParser.hpp  NspcProject.hpp  NspcProjectFile.hpp  NspcSpcExport.hpp
include/ntrak/ui/: AramUsagePanel.hpp  AssetsPanel.hpp  BuildPanel.hpp  ControlPanel.hpp  Panel.hpp  PatternEditorPanel.hpp  PatternEditorPanelUtils.hpp  ProjectPanel.hpp  QuickGuidePanel.hpp  SequenceEditorPanel.hpp  SongPortDialog.hpp  SpcInfoPanel.hpp  SpcPlayerPanel.hpp  UiManager.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
packaging/: README_WINDOWS.txt  WINDOWS_RELEASE_NOTES.md  build_windows_release.bat  check_system_windows.bat  ntrak.desktop  ntrak.manifest
src/: main.cpp
src/app/: App.cpp  CMakeLists.txt
src/audio/: AudioEngine.cpp  CMakeLists.txt  SpcPlayer.cpp
src/common/: CMakeLists.txt  Log.cpp  Logger.cpp  Paths.cpp  UserGuide.cpp
src/emulation/: CMakeLists.txt  SpcDsp.cpp
src/emulation/ares-apu/: CMakeLists.txt  LICENSE
src/emulation/ares-apu/examples/: tone.cpp
src/emulation/ares-apu/include/: ares-apu.h
src/emulation/ares-apu/src/: ares-apu.cpp  dsp.cpp  dsp.h  smp.cpp  smp.h  spc700.cpp  spc700.h  types.h
src/nspc/: Base64.cpp  BrrCodec.cpp  CMakeLists.txt  ItImport.cpp  MidiImport.cpp  NspcAssetFile.cpp  NspcCommand.cpp  NspcCommandHistory.cpp  NspcCompile.cpp  NspcCompileRoundTrip.cpp  NspcCompileSongScoped.cpp  NspcCompileUserUpload.cpp  NspcConverter.cpp  NspcData.cpp  NspcEditor.cpp  NspcEngine.cpp  NspcFlatten.cpp  NspcOptimize.cpp  NspcParser.cpp  NspcProject.cpp  NspcProjectFile.cpp  NspcSpcExport.cpp
src/tools/: CMakeLists.txt  NspcSongDump.cpp
src/ui/: AramUsagePanel.cpp  AssetsPanel.cpp  BuildPanel.cpp  CMakeLists.txt  ControlPanel.cpp  PatternEditorPanel.cpp  PatternEditorPanelEditing.cpp  PatternEditorPanelUtils.cpp  ProjectPanel.cpp  QuickGuidePanel.cpp  SequenceEditorPanel.cpp  SongPortDialog.cpp  SpcInfoPanel.cpp  SpcPlayerPanel.cpp  UiManager.cpp
tests/: BrrCodecTest.cpp  CMakeLists.txt  ItImportTest.cpp  NspcAssetFileTest.cpp  NspcCommandMapTest.cpp  NspcCompileSongScopedTest.cpp  NspcCompileUserUploadTest.cpp  NspcContentOriginTest.cpp  NspcConverterTest.cpp  NspcEditorTest.cpp  NspcEngineConfigLoadFailureTest.cpp  NspcEngineConfigResolveTest.cpp  NspcFlattenTest.cpp  NspcIntegrationTest.cpp  NspcOptimizeTest.cpp  NspcProjectFileParseSongTest.cpp  NspcProjectFileTest.cpp  NspcProjectSongManagementTest.cpp  NspcTestHelpers.hpp  SpcDspPreviewTest.cpp
